--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img id="centerButton" src="center.svg" height="40px" class="noselect">
         <img id="clearButton" src="clear.svg" height="40px" class="noselect">
     </div>
-    <script type="text/javascript" src="weights.js"></script>
+    <script type="text/javascript" src="constants.js"></script>
     <script type="text/javascript" src="connectome.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
