--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>C. Elegans Sim</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 
 <body>
@@ -14,15 +14,15 @@
         <span class="slider round"></span>
     </label>
     <a href="https://github.com/Fantop/worm-sim">
-        <img id="githubButton" src="github.svg" class="noselect">
+        <img id="githubButton" src="./svg/github.svg" class="noselect">
     </a>
     <div id="buttons">
-        <img id="centerButton" src="center.svg" height="40px" class="noselect">
-        <img id="clearButton" src="clear.svg" height="40px" class="noselect">
+        <img id="centerButton" src="./svg/center.svg" height="40px" class="noselect">
+        <img id="clearButton" src="./svg/clear.svg" height="40px" class="noselect">
     </div>
-    <script type="text/javascript" src="constants.js"></script>
-    <script type="text/javascript" src="connectome.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="./js/constants.js"></script>
+    <script type="text/javascript" src="./js/connectome.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
 </html>
